--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 </head>
 <body>
     <div class="points"></div>
-    <div class="messages"></div>
     <div class="time"></div>
+
+    <div class="modal start-modal">
+        <h4>Kliknij żeby zagrać!</h4>
+        <button>START!</button>
+    </div>
+
+    <div class="modal end-modal">
+        <h4>Gra zaknczona! Twój wynik to:</h4>
+        <h4 class="score"></h4>
+        <button>RESTART!</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
